--- a/DatabaseProject/.classpath
+++ b/DatabaseProject/.classpath
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="var" path="OSU_CSE_LIBRARY">
-		<attributes>
-			<attribute name="javadoc_location" value="http://web.cse.ohio-state.edu/software/common/doc8"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/Users/vandanpatel/Downloads/database_code/sqlite-jdbc-3.36.0.jar"/>
+	<classpathentry kind="lib" path="./sqlite-jdbc-3.36.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
